Improve styles. Add overflow, fix heights and widths, improve colors.

--- a/src/client/board-column/BoardColumn.css
+++ b/src/client/board-column/BoardColumn.css
@@ -7,10 +7,12 @@
     justify-content: flex-start;
     align-items: center;
     box-sizing: border-box;
-    max-width: 400px;
+    width: 300px;
+    min-width: 200px;
     height: fit-content;
+    max-height: 100%;
     border-radius: 3px;
-    background: #e9e6e6;
+    background: #ebecf0;
 }
 .board_column__body {
     display: flex;
@@ -18,6 +20,10 @@
     justify-content: flex-start;
     align-items: center;
     width: 90%;
+    height: 100%;
+    max-height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
     box-sizing: border-box;
     margin: 10px;
 }
