--- a/src/client/board-column/BoardTask.css
+++ b/src/client/board-column/BoardTask.css
@@ -1,8 +1,9 @@
 .board-column__task {
+    height: fit-content;
+    padding: 10px 3px;
     border-radius: 3px;
     text-align: center;
     box-sizing: border-box;
-    line-height: 2.5em;
-    padding: 0 3px;
     background: white;
+    word-break: break-word;
 }
