--- a/src/client/board/Board.css
+++ b/src/client/board/Board.css
@@ -3,12 +3,11 @@
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
-    width: 90%;
-    max-width: 90%;
+    width: 100%;
     min-height: fit-content;
     height: 100%;
     margin: auto;
     justify-content: flex-start;
     background: linear-gradient(135deg, #cea4a4, transparent);
-    border-radius: 5px;
+    overflow: hidden;
 }
