--- a/src/client/board/BoardBody.css
+++ b/src/client/board/BoardBody.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: row;
     justify-content: start;
-    flex-wrap: wrap;
     box-sizing: border-box;
     width: 100%;
     padding: 20px;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
