--- a/src/client/board/BoardHeader.css
+++ b/src/client/board/BoardHeader.css
@@ -6,8 +6,9 @@
     width: 100%;
     height: 70px;
     box-sizing: border-box;
-    border-bottom: 1px solid white;
     padding: 10px 40px;
+    background-color: rgba(0,0,0,0.45);
+    color: white;
 }
 .board__name {
     font-size: 1.4em;
