--- a/src/client/index.css
+++ b/src/client/index.css
@@ -19,6 +19,7 @@ html,
     min-height: fit-content;
     width: 100%;
     font-family: "Montserrat", sans-serif;
+    overflow: hidden;
 }
 
 .board__edit-icon{
